exports[`prefer-string-raw > invalid(1): ({ ['a\\\\b']: 1 }) 1`] = `

  1 | ({ ['a\\\\b']: 1 })

`;

exports[`prefer-string-raw > invalid(1): ({ ['a\\\\b']: 1 }) 2`] = `

Message:
> 1 | ({ ['a\\\\b']: 1 })
    |     ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | ({ [String.raw\`a\\b\`]: 1 })

`;

exports[`prefer-string-raw > invalid(1): TEST_STRING = 'a\\\\b'; 1`] = `

  1 | TEST_STRING = 'a\\\\b';

`;

exports[`prefer-string-raw > invalid(1): TEST_STRING = 'a\\\\b'; 2`] = `

Message:
> 1 | TEST_STRING = 'a\\\\b';
    |               ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | TEST_STRING = String.raw\`a\\b\`;

`;

exports[`prefer-string-raw > invalid(1): a = String.raw\`abc\` 1`] = `

  1 | a = String.raw\`abc\`

`;

exports[`prefer-string-raw > invalid(1): a = String.raw\`abc\` 2`] = `

Message:
> 1 | a = String.raw\`abc\`
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a = 'abc'

`;

exports[`prefer-string-raw > invalid(1): a = \`a\\\\b\` 1`] = `

  1 | a = \`a\\\\b\`

`;

exports[`prefer-string-raw > invalid(1): a = \`a\\\\b\` 2`] = `

Message:
> 1 | a = \`a\\\\b\`
    |     ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\\b\`

`;

exports[`prefer-string-raw > invalid(10): a = \`\${ foo .bar }a\\\\b\` 1`] = `

  1 | a = \`\${ foo .bar }a\\\\b\`

`;

exports[`prefer-string-raw > invalid(10): a = \`\${ foo .bar }a\\\\b\` 2`] = `

Message:
> 1 | a = \`\${ foo .bar }a\\\\b\`
    |     ^^^^^^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`\${ foo .bar }a\\b\`

`;

exports[`prefer-string-raw > invalid(10): a\nString.raw\`a\${b}\` 1`] = `

  1 | a
  2 | String.raw\`a\${b}\`

`;

exports[`prefer-string-raw > invalid(10): a\nString.raw\`a\${b}\` 2`] = `

Message:
  1 | a
> 2 | String.raw\`a\${b}\`
    | ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a
  2 | ;\`a\${b}\`

`;

exports[`prefer-string-raw > invalid(11): a = String.raw\n// Comment\n\`ab\nc\` 1`] = `

  1 | a = String.raw
  2 | // Comment
  3 | \`ab
  4 | c\`

`;

exports[`prefer-string-raw > invalid(11): a = String.raw\n// Comment\n\`ab\nc\` 2`] = `

Message:
> 1 | a = String.raw
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  2 | // Comment
  3 | \`ab
  4 | c\`

Output:
  1 | a = 
  2 | // Comment
  3 | \`ab
  4 | c\`

`;

exports[`prefer-string-raw > invalid(12): a = String.raw  /* comment */  \`ab\nc\` 1`] = `

  1 | a = String.raw  /* comment */  \`ab
  2 | c\`

`;

exports[`prefer-string-raw > invalid(12): a = String.raw  /* comment */  \`ab\nc\` 2`] = `

Message:
> 1 | a = String.raw  /* comment */  \`ab
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  2 | c\`

Output:
  1 | a =   /* comment */  \`ab
  2 | c\`

`;

exports[`prefer-string-raw > invalid(13): function foo() {\n\treturn String.raw\`abc\`\n} 1`] = `

  1 | function foo() {
  2 | 	return String.raw\`abc\`
  3 | }

`;

exports[`prefer-string-raw > invalid(13): function foo() {\n\treturn String.raw\`abc\`\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return String.raw\`abc\`
    | 	       ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  3 | }

Output:
  1 | function foo() {
  2 | 	return 'abc'
  3 | }

`;

exports[`prefer-string-raw > invalid(14): function foo() {\n\treturn String.raw\n\t\t\t// comment\n\t\t\t\`abc\`\n} 1`] = `

  1 | function foo() {
  2 | 	return String.raw
  3 | 			// comment
  4 | 			\`abc\`
  5 | }

`;

exports[`prefer-string-raw > invalid(14): function foo() {\n\treturn String.raw\n\t\t\t// comment\n\t\t\t\`abc\`\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return String.raw
    | 	       ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  3 | 			// comment
  4 | 			\`abc\`
  5 | }

Output:
  1 | function foo() {
  2 | 	return ( 
  3 | 			// comment
  4 | 			'abc')
  5 | }

`;

exports[`prefer-string-raw > invalid(15): function foo() {\n\treturn (String.raw\n\t\t\t// already parenthesized\n\t\t\t\`abc\`)\n} 1`] = `

  1 | function foo() {
  2 | 	return (String.raw
  3 | 			// already parenthesized
  4 | 			\`abc\`)
  5 | }

`;

exports[`prefer-string-raw > invalid(15): function foo() {\n\treturn (String.raw\n\t\t\t// already parenthesized\n\t\t\t\`abc\`)\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return (String.raw
    | 	        ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  3 | 			// already parenthesized
  4 | 			\`abc\`)
  5 | }

Output:
  1 | function foo() {
  2 | 	return (
  3 | 			// already parenthesized
  4 | 			'abc')
  5 | }

`;

exports[`prefer-string-raw > invalid(16): function foo() {\n\treturn (String.raw) // remove parenthesis\n\t\t\t\`abc\`\n} 1`] = `

  1 | function foo() {
  2 | 	return (String.raw) // remove parenthesis
  3 | 			\`abc\`
  4 | }

`;

exports[`prefer-string-raw > invalid(16): function foo() {\n\treturn (String.raw) // remove parenthesis\n\t\t\t\`abc\`\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return (String.raw) // remove parenthesis
    | 	        ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  3 | 			\`abc\`
  4 | }

Output:
  1 | function foo() {
  2 | 	return (  // remove parenthesis
  3 | 			'abc')
  4 | }

`;

exports[`prefer-string-raw > invalid(17): String.raw\`use strict\` 1`] = `

  1 | String.raw\`use strict\`

`;

exports[`prefer-string-raw > invalid(17): String.raw\`use strict\` 2`] = `

Message:
> 1 | String.raw\`use strict\`
    | ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | 'use strict'

`;

exports[`prefer-string-raw > invalid(2): a = String.raw\`ab\${foo}cd\` 1`] = `

  1 | a = String.raw\`ab\${foo}cd\`

`;

exports[`prefer-string-raw > invalid(2): a = String.raw\`ab\${foo}cd\` 2`] = `

Message:
> 1 | a = String.raw\`ab\${foo}cd\`
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a = \`ab\${foo}cd\`

`;

exports[`prefer-string-raw > invalid(2): class C { ['a\\\\b'] = 1 } 1`] = `

  1 | class C { ['a\\\\b'] = 1 }

`;

exports[`prefer-string-raw > invalid(2): class C { ['a\\\\b'] = 1 } 2`] = `

Message:
> 1 | class C { ['a\\\\b'] = 1 }
    |            ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | class C { [String.raw\`a\\b\`] = 1 }

`;

exports[`prefer-string-raw > invalid(2): function a() {return'a\\\\b'} 1`] = `

  1 | function a() {return'a\\\\b'}

`;

exports[`prefer-string-raw > invalid(2): function a() {return'a\\\\b'} 2`] = `

Message:
> 1 | function a() {return'a\\\\b'}
    |                     ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | function a() {return String.raw\`a\\b\`}

`;

exports[`prefer-string-raw > invalid(2): function a() {return\`a\\\\b\${foo}cd\`} 1`] = `

  1 | function a() {return\`a\\\\b\${foo}cd\`}

`;

exports[`prefer-string-raw > invalid(2): function a() {return\`a\\\\b\${foo}cd\`} 2`] = `

Message:
> 1 | function a() {return\`a\\\\b\${foo}cd\`}
    |                     ^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | function a() {return String.raw\`a\\b\${foo}cd\`}

`;

exports[`prefer-string-raw > invalid(3): a = String.raw\`ab\"c\` 1`] = `

  1 | a = String.raw\`ab"c\`

`;

exports[`prefer-string-raw > invalid(3): a = String.raw\`ab\"c\` 2`] = `

Message:
> 1 | a = String.raw\`ab"c\`
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a = 'ab"c'

`;

exports[`prefer-string-raw > invalid(3): a = {[\`a\\\\b\${foo}cd\${foo.bar}e\\\\f\`]: b} 1`] = `

  1 | a = {[\`a\\\\b\${foo}cd\${foo.bar}e\\\\f\`]: b}

`;

exports[`prefer-string-raw > invalid(3): a = {[\`a\\\\b\${foo}cd\${foo.bar}e\\\\f\`]: b} 2`] = `

Message:
> 1 | a = {[\`a\\\\b\${foo}cd\${foo.bar}e\\\\f\`]: b}
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = {[String.raw\`a\\b\${foo}cd\${foo.bar}e\\f\`]: b}

`;

exports[`prefer-string-raw > invalid(3): class C { ['a\\\\b'](){} } 1`] = `

  1 | class C { ['a\\\\b'](){} }

`;

exports[`prefer-string-raw > invalid(3): class C { ['a\\\\b'](){} } 2`] = `

Message:
> 1 | class C { ['a\\\\b'](){} }
    |            ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | class C { [String.raw\`a\\b\`](){} }

`;

exports[`prefer-string-raw > invalid(3): const foo = \"foo \\\\x46\"; 1`] = `

  1 | const foo = "foo \\\\x46";

`;

exports[`prefer-string-raw > invalid(3): const foo = \"foo \\\\x46\"; 2`] = `

Message:
> 1 | const foo = "foo \\\\x46";
    |             ^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | const foo = String.raw\`foo \\x46\`;

`;

exports[`prefer-string-raw > invalid(4): a = 'a\\\\b\\'' 1`] = `

  1 | a = 'a\\\\b\\''

`;

exports[`prefer-string-raw > invalid(4): a = 'a\\\\b\\'' 2`] = `

Message:
> 1 | a = 'a\\\\b\\''
    |     ^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\\b'\`

`;

exports[`prefer-string-raw > invalid(4): a = String.raw\`ab'c\` 1`] = `

  1 | a = String.raw\`ab'c\`

`;

exports[`prefer-string-raw > invalid(4): a = String.raw\`ab'c\` 2`] = `

Message:
> 1 | a = String.raw\`ab'c\`
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a = 'ab\\'c'

`;

exports[`prefer-string-raw > invalid(4): a = \`a\${foo}\${foo.bar}b\\\\c\` 1`] = `

  1 | a = \`a\${foo}\${foo.bar}b\\\\c\`

`;

exports[`prefer-string-raw > invalid(4): a = \`a\${foo}\${foo.bar}b\\\\c\` 2`] = `

Message:
> 1 | a = \`a\${foo}\${foo.bar}b\\\\c\`
    |     ^^^^^^^^^^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\${foo}\${foo.bar}b\\c\`

`;

exports[`prefer-string-raw > invalid(4): class C { accessor ['a\\\\b'] = 1 } 1`] = `

  1 | class C { accessor ['a\\\\b'] = 1 }

`;

exports[`prefer-string-raw > invalid(4): class C { accessor ['a\\\\b'] = 1 } 2`] = `

Message:
> 1 | class C { accessor ['a\\\\b'] = 1 }
    |                     ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | class C { accessor [String.raw\`a\\b\`] = 1 }

`;

exports[`prefer-string-raw > invalid(5): a = String.raw\`ab'\"c\` 1`] = `

  1 | a = String.raw\`ab'"c\`

`;

exports[`prefer-string-raw > invalid(5): a = String.raw\`ab'\"c\` 2`] = `

Message:
> 1 | a = String.raw\`ab'"c\`
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a = 'ab\\'"c'

`;

exports[`prefer-string-raw > invalid(5): a = \"a\\\\b\\\"\" 1`] = `

  1 | a = "a\\\\b\\""

`;

exports[`prefer-string-raw > invalid(5): a = \"a\\\\b\\\"\" 2`] = `

Message:
> 1 | a = "a\\\\b\\""
    |     ^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\\b"\`

`;

exports[`prefer-string-raw > invalid(5): a = \`a\\\\b\${\"c\\\\d\"}e\` 1`] = `

  1 | a = \`a\\\\b\${"c\\\\d"}e\`

`;

exports[`prefer-string-raw > invalid(5): a = \`a\\\\b\${\"c\\\\d\"}e\` 2`] = `

Message:
> 1 | a = \`a\\\\b\${"c\\\\d"}e\`
    |     ^^^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\\b\${"c\\\\d"}e\`

`;

exports[`prefer-string-raw > invalid(5): a = \`a\\\\b\${\"c\\\\d\"}e\` 3`] = `

Message:
> 1 | a = \`a\\\\b\${"c\\\\d"}e\`
    |            ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = \`a\\\\b\${String.raw\`c\\d\`}e\`

`;

exports[`prefer-string-raw > invalid(5): expect('a\\\\b').toMatchInlineSnapshot(\"\") 1`] = `

  1 | expect('a\\\\b').toMatchInlineSnapshot("")

`;

exports[`prefer-string-raw > invalid(5): expect('a\\\\b').toMatchInlineSnapshot(\"\") 2`] = `

Message:
> 1 | expect('a\\\\b').toMatchInlineSnapshot("")
    |        ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | expect(String.raw\`a\\b\`).toMatchInlineSnapshot("")

`;

exports[`prefer-string-raw > invalid(6): a = String.raw\`ab\r\nc\` 1`] = `

  1 | a = String.raw\`ab
  2 | c\`

`;

exports[`prefer-string-raw > invalid(6): a = String.raw\`ab\r\nc\` 2`] = `

Message:
> 1 | a = String.raw\`ab
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  2 | c\`

Output:
  1 | a = \`ab
  2 | c\`

`;

exports[`prefer-string-raw > invalid(6): a = \`\\\\a\nb\` 1`] = `

  1 | a = \`\\\\a
  2 | b\`

`;

exports[`prefer-string-raw > invalid(6): a = \`\\\\a\nb\` 2`] = `

Message:
> 1 | a = \`\\\\a
    |     ^^^^
> 2 | b\`
    | ^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`\\a
  2 | b\`

`;

exports[`prefer-string-raw > invalid(6): expect(\`a\\\\b\`).toMatchInlineSnapshot(\`\`) 1`] = `

  1 | expect(\`a\\\\b\`).toMatchInlineSnapshot(\`\`)

`;

exports[`prefer-string-raw > invalid(6): expect(\`a\\\\b\`).toMatchInlineSnapshot(\`\`) 2`] = `

Message:
> 1 | expect(\`a\\\\b\`).toMatchInlineSnapshot(\`\`)
    |        ^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | expect(String.raw\`a\\b\`).toMatchInlineSnapshot(\`\`)

`;

exports[`prefer-string-raw > invalid(7): a = String.raw\`a\n\tbc\n\tde\` 1`] = `

  1 | a = String.raw\`a
  2 | 	bc
  3 | 	de\`

`;

exports[`prefer-string-raw > invalid(7): a = String.raw\`a\n\tbc\n\tde\` 2`] = `

Message:
> 1 | a = String.raw\`a
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  2 | 	bc
  3 | 	de\`

Output:
  1 | a = \`a
  2 | 	bc
  3 | 	de\`

`;

exports[`prefer-string-raw > invalid(7): a = \`\\\\a\${foo}\nb\${bar}c\nd\\\\\\\\e\` 1`] = `

  1 | a = \`\\\\a\${foo}
  2 | b\${bar}c
  3 | d\\\\\\\\e\`

`;

exports[`prefer-string-raw > invalid(7): a = \`\\\\a\${foo}\nb\${bar}c\nd\\\\\\\\e\` 2`] = `

Message:
> 1 | a = \`\\\\a\${foo}
    |     ^^^^^^^^^^
> 2 | b\${bar}c
    | ^^^^^^^^
> 3 | d\\\\\\\\e\`
    | ^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`\\a\${foo}
  2 | b\${bar}c
  3 | d\\\\e\`

`;

exports[`prefer-string-raw > invalid(8): a = String.raw\`\na\${foo}b\n\${bar}cd\` 1`] = `

  1 | a = String.raw\`
  2 | a\${foo}b
  3 | \${bar}cd\`

`;

exports[`prefer-string-raw > invalid(8): a = String.raw\`\na\${foo}b\n\${bar}cd\` 2`] = `

Message:
> 1 | a = String.raw\`
    |     ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.
  2 | a\${foo}b
  3 | \${bar}cd\`

Output:
  1 | a = \`
  2 | a\${foo}b
  3 | \${bar}cd\`

`;

exports[`prefer-string-raw > invalid(8): a = \`a\\\\b\${ foo /* bar */}c\\\\d\` 1`] = `

  1 | a = \`a\\\\b\${ foo /* bar */}c\\\\d\`

`;

exports[`prefer-string-raw > invalid(8): a = \`a\\\\b\${ foo /* bar */}c\\\\d\` 2`] = `

Message:
> 1 | a = \`a\\\\b\${ foo /* bar */}c\\\\d\`
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\\b\${ foo /* bar */}c\\d\`

`;

exports[`prefer-string-raw > invalid(9): a = \`a\\\\b\${ foo + bar }\` 1`] = `

  1 | a = \`a\\\\b\${ foo + bar }\`

`;

exports[`prefer-string-raw > invalid(9): a = \`a\\\\b\${ foo + bar }\` 2`] = `

Message:
> 1 | a = \`a\\\\b\${ foo + bar }\`
    |     ^^^^^^^^^^^^^^^^^^^^ \`String.raw\` should be used to avoid escaping \`\\\`.

Output:
  1 | a = String.raw\`a\\b\${ foo + bar }\`

`;

exports[`prefer-string-raw > invalid(9): a\nString.raw\`abc\` 1`] = `

  1 | a
  2 | String.raw\`abc\`

`;

exports[`prefer-string-raw > invalid(9): a\nString.raw\`abc\` 2`] = `

Message:
  1 | a
> 2 | String.raw\`abc\`
    | ^^^^^^^^^^ Using \`String.raw\` is unnecessary as the string does not contain any \`\\\`.

Output:
  1 | a
  2 | 'abc'

`;
